# clipboard-sync

./: .gitignore  .prettierignore  clipboard-sync.code-workspace  eslint.config.ts  package.json  pnpm-lock.yaml  turbo.json  wxt.config.ts
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/actions/setup-env/: action.yml
.github/workflows/: prerelease.yaml  pull-request.yaml  release.yaml
apps/client/: .prettierignore  TODO.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts
apps/client/src/: App.css  App.tsx  constants.ts  main.tsx  vite-env.d.ts
apps/client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: crypto.rs  lib.rs  main.rs
apps/client/src-tauri/src/commands/: crypto.rs  mod.rs  platform.rs  secret.rs  window.rs
apps/client/src-tauri/src/crypto/: mod.rs
apps/client/src-tauri/src/platform/: mod.rs
apps/client/src-tauri/src/states/: mod.rs
apps/client/src/components/: Dashboard.tsx  ErrorBoundary.tsx  Setup.tsx  SetupForm.tsx  (+2 more)
apps/server/: .prettierignore  eslint.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
apps/server/src/: index.ts
docs/: ARCHITECTURE.md  CLIENT.md  OVERVIEW.md  PROTOCOL.md  README.md  SECURITY.md  SERVER.md  TECH_STACK.md
docs/specs/: ARCHITECTURE.md  CLIENT.md  PROTOCOL.md  README.md  SERVER.md  TECH_STACK.md
scripts/: setup_debian_linux.sh  setup_debian_windows.sh
(+78 files in other folders)
